--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cube-ui": "~1.12.15",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.11.0",
+    "koa-jwt": "^3.6.0",
+    "koa-router": "^8.0.8",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
